test/successor_ml/should_not_compile/record_extension_expression.sml
val x = { a = 123 }
val y = { b = 456 }
val z = { ... = x, ... = y };
